# Ogoras

./: .gitignore  .gitmodules  CMakeLists.txt  Ogoras  README.md  fabula.odt
data/: blocks.xcf
data/characters/: player.png.ini  player.xcf  stary.xcf
data/levels/doors/: blocks.ini  config.ini  map.lvl
data/levels/lvl0/: Player.ini  blocks.ini  config.ini  main.scr  map.lvl  npc.ini
data/levels/test/: blocks.ini  npc.ini  script1.scr
data/lvl0/: blocks.ini  config.ini  map.ini  map.lvl  npc.ini
data/lvl1/: map.ini
include/: Animation.hpp  Button.hpp  Console.hpp  Entity.hpp  Game.hpp  Ini.hpp  Map.hpp  Menu.hpp  Message.hpp  NPC.hpp  Npc.hpp  Player.hpp  tools.hpp  version.hpp  version.hpp.in
resources/: buildResources.sh  icon.png.hpp  notFound.png.hpp  player.png.hpp
src/: Animation.cpp  Button.cpp  Console.cpp  Game.cpp  Ini.cpp  Map.cpp  Menu.cpp  Message.cpp  NPC.cpp  Npc.cpp  Player.cpp  main.cpp  tools.cpp
